force-app/main/default/objects/WSCountry__c/WSCountry__c.object-meta.xml
<CustomObject>
    <description>Countries from https://restcountries.com/v3.1/all</description>
    <label>WSCountry</label>
    <nameField>
        <label>WSCountry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSCountries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>