force-app/main/default/objects/WSCountry__c/fields/External_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Name__c</fullName>
    <description>Name used as an external id.</description>
    <externalId>true</externalId>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>