force-app/main/default/objects/WSCountry__c/fields/ISO2__c.field-meta.xml
<CustomField>
    <fullName>ISO2__c</fullName>
    <description>Country ISO code 2</description>
    <label>ISO2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>