force-app/main/default/objects/WSCountry__c/fields/ISO3__c.field-meta.xml
<CustomField>
    <fullName>ISO3__c</fullName>
    <description>Country ISO code 3</description>
    <label>ISO3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>