force-app/main/default/objects/WSCountry__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Country Region</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>