force-app/main/default/objects/WSCountry__c/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <description>Country subregion</description>
    <label>Subregion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>